fix: container-main overflow: hidden

--- a/dashboard/src/App.css
+++ b/dashboard/src/App.css
@@ -20,6 +20,10 @@ body {
   background-color: #f5f5f5;
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
+  /*position: fixed;*/
+  overflow-x: hidden;
+  overflow-y: hidden;
   padding: 10px;
 }
 
@@ -74,11 +78,21 @@ body {
   align-items: center;
 }
 
-.contatiner-main__item-nav {
+.contatiner-main__item-nav__top {
   display: grid;
   grid-column-start: 1;
   grid-column-end: 2;
   grid-row-start: 1;
+  grid-row-end: 4;
+  /*grid settings*/
+  background-color: #f5f5f5;
+}
+
+.container-main__item-nav__bottom {
+  display: grid;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 3;
   grid-row-end: 4;
   /*grid settings*/
   background-color: #f5f5f5;
@@ -184,7 +198,7 @@ button {
 */
 
 .container-main__item-nav--menu-top {
-  display: inline-block;
+  display: grid;
 
   background-color: #ffffff;
   width: 50px;
@@ -197,7 +211,7 @@ button {
 }
 
 .container-main__item-nav--menu-bottom {
-  display: inline-block;
+  display: grid;
 
   background-color: #ffffff;
   width: 50px;
@@ -209,50 +223,61 @@ button {
   align-items: center;
 }
 
-/*journal-box design*/
-/*
-.Journal-box {
+.container-main__item-dashboard {
+  display: grid;
+  grid-column-start: 2;
+  grid-column-end: 4;
+  grid-row-start: 2;
+  grid-row-end: 4;
+  /*grid settings*/
   background-color: #ffffff;
-  color: #4f4f4f;
-  display: flex;
-  float: left;
+}
+
+/*dashboard-journal design*/
+
+.container-main__item-dashboard-journal {
+  display: grid;
+  grid-column-start: 2;
+  grid-column-end: 4;
+  grid-row-start: 2;
+  grid-row-end: 4;
+  /*grid settings*/
+  background-color: #ffffff;
   width: 100%;
-  height: 300px;
-  padding: 30px;
-  margin-right: 10px;
+  height: 100%;
   border: none;
   border-radius: 5px;
-}
+  /*
+  grid-template-columns: 30px 1fr 30px;
+  grid-template-rows: 50px 1fr 2fr;
+  row-gap: 10px;
+  column-gap: 10px;
 */
+  /*grid container settings*/
+}
 
-.Journal-list {
+.container-main__item-dashboard-journal__list {
   background-color: #f2f2f2;
   color: #4f4f4f;
   display: flex;
   float: left;
-  margin-top: 10px;
-  margin-left: 30px;
-  width: 100%;
+  width: 80%;
   height: 50px;
   text-align: left;
   padding-left: 20px;
   padding-right: 20px;
   border-radius: 5px;
+  align-items: center;
 }
 
-.Journal-tag {
+.container-main__item-dashboard-journal__list--tag {
   color: #4f4f4f;
   font-size: 20px;
   font-weight: 400;
-  display: flex;
-  float: left;
   align-items: center;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  margin-left: 10px;
 }
 
-.Journal-title {
+.container-main__item-dashboard-journal__list--title {
   color: #4f4f4f;
   font-size: 20px;
   font-weight: 300;
